<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#44000000"
        android:orientation="horizontal" >

    <Button
            android:id="@+id/btnMap"
            style="@style/ButtonText"
            android:layout_weight="3"
            android:background="@drawable/btn_blue"
            android:onClick="onMapPress"
            android:text="@string/search" >
    </Button>

    <Button
            android:id="@+id/btnDirection"
            style="@style/ButtonText"
            android:layout_weight="3"
            android:background="@drawable/btn_blue"
            android:onClick="onDirectionPress"
            android:text="@string/direction" >
    </Button>

    <Button
            android:id="@+id/btnSettings"
            style="@style/ButtonText"
            android:layout_weight="3"
            android:background="@drawable/btn_blue"
            android:onClick="onSettingsPress"
            android:text="@string/settings" >
    </Button>
</LinearLayout>