<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#11d0ff"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:id="@+id/lblWelcomeTitle"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_below="@id/lblWelcomeTitle"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/icon"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/description"
            android:id="@+id/lblWelcomeDescription"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:lines="2"
            android:textSize="20sp"
            android:gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblWelcomeDescription"
            android:layout_centerHorizontal="true"
            android:text="@string/licenses"
            android:id="@+id/lblLicense"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/copyright"
            android:id="@+id/lblCopyright"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
</RelativeLayout>